# CarletonRemoteLabView

./: CMakeLists.txt  README.md
src/client/: main.cpp  monitorwindow.cpp  monitorwindow.h
src/server/: server.cpp
